# mobile76

./: Dates.hs  Fac.hs  Lib.hs  P1.hs  P2.hs  P3.hs  URL.hs  binary.hs  binary2.hs  binary3.hs  binary4.hs  elo.hs  geo.hs  hrt1.hs  hrt2.hs  hrt3.hs  http.hs  mobile76.cabal  officers.py  officers.sh  packets.hs  parallel.hs  partiful.html  process.hs  quicksort.hs  reader.hs  serve.hs  svd.hs  system.hs
haskell/: URL.hs  binary.hs  binary2.hs  binary3.hs  binary4.hs  fac.hs  hrt1.hs  hrt2.hs  p1.hs  p2.hs  p3.hs  process.hs  quicksort.hs
haskell/appledore/: CHANGELOG.md  appledore.cabal  package.yaml
haskell/appledore/app/: Main.hs
haskell/appledore/src/: Dates.hs  Fac.hs  P3.hs  URL.hs
haskell/briseis/: CHANGELOG.md  README.md  briseis.cabal  package.yaml
haskell/briseis/app/: Main.hs
haskell/briseis/src/: Lib.hs
