cabal-version:        3.0
name:                 mobile76
version:              0.1.0.0

executable binary
  main-is:            binary.hs
  build-depends:      base
  default-language:   Haskell2010

executable binary2
  main-is:            binary2.hs
  build-depends:      base
  default-language:   Haskell2010

executable binary3
  main-is:            binary3.hs
  build-depends:      base
  default-language:   Haskell2010

executable binary4
  main-is:            binary4.hs
  build-depends:      base
  default-language:   Haskell2010

executable dates
  main-is:            dates.hs
  build-depends:      base, time
  default-language:   Haskell2010

executable fac
  main-is:            fac.hs
  build-depends:      base
  default-language:   Haskell2010

executable geo
  main-is:            geo.hs
  build-depends:      base, random
  default-language:   Haskell2010

executable hrt1
  main-is:            hrt1.hs
  build-depends:      base, containers
  default-language:   Haskell2010

executable hrt2
  main-is:            hrt2.hs
  build-depends:      base, containers
  default-language:   Haskell2010

executable hrt3
  main-is:            hrt3.hs
  build-depends:      base, bytestring
  default-language:   Haskell2010

executable lib
  main-is:            lib.hs
  build-depends:      base
  default-language:   Haskell2010

executable p1
  main-is:            p1.hs
  build-depends:      base
  default-language:   Haskell2010

executable p2
  main-is:            p2.hs
  build-depends:      base
  default-language:   Haskell2010

executable p3
  main-is:            p3.hs
  build-depends:      base
  default-language:   Haskell2010

executable parallel
  main-is:            parallel.hs
  build-depends:      base, parallel, criterion
  default-language:   Haskell2010

executable process
  main-is:            process.hs
  build-depends:      base, process, directory, async
  default-language:   Haskell2010

executable quicksort
  main-is:            quicksort.hs
  build-depends:      base
  default-language:   Haskell2010

executable reader
  main-is:            reader.hs
  build-depends:      base, mtl
  default-language:   Haskell2010

executable system
  main-is:            system.hs
  build-depends:      base, process, directory
  default-language:   Haskell2010

executable url
  main-is:            url.hs
  build-depends:      base, network-uri
  default-language:   Haskell2010
